practice/1.2.kube-basics-practice/kube/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fileshare
spec:
  rules:
  - host: s<номер своего логина>.k8s.slurm.io
    http:
      paths:
      - backend:
          serviceName: fileshare
          servicePort: 80
